--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Inter";
-    src: url("../../static/Inter.ttf");
+    src: url("../../fonts/Inter.ttf");
 }
 
 .page {
