--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,7 +5,7 @@
 
 .page {
     -webkit-font-smoothing: antialiased;
-    font-family: 'Inter', serif;;
+    font-family: 'Inter', serif;
     display: flex;
     flex-direction: column;
     align-items: center;
