--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,9 +1,19 @@
 .cover__background {
+    position: absolute;
+    top: 0;
+    left: 48px;
     background-image: url("../../../images/cover-trains.jpg");
-    width: 100%;
-    padding-bottom: 62.5%;
+    width: calc(100% - 96px);
+    height: 100%;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     z-index: 1;
+}
+
+@media screen and (max-width: 1279px) {
+    .cover__background {
+        left: 0;
+        width: 100%;
+    }
 }
