--- a/blocks/cover/__opacity/cover__opacity.css
+++ b/blocks/cover/__opacity/cover__opacity.css
@@ -1,7 +1,10 @@
 .cover__opacity {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: #2A2C2F;
     opacity: 0.3;
+    z-index: 2;
 }
