--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,18 +1,18 @@
 .cover__overlay {
-    position: absolute;
-    z-index: 1;
-    width: calc(100% - 96px);
-    padding-bottom: calc((100% - 96px)*0.625);
+    color: #fff;
+    text-decoration: none;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
 }
 
-.cover__overlay:hover div:last-of-type {
+.cover__overlay:hover>.cover__opacity:last-of-type {
     color: #fff;
     opacity: 0.8;
-}
-
-@media screen and (max-width: 1279px) {
-    .cover__overlay {
-        width: 100%;
-        padding-bottom:  calc(100% * 0.625);
-    }
 }
