--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,12 @@
 .cover__subtitle {
+    position: relative;
     text-align: center;
     max-width: 360px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
     margin: 0;
-    z-index: 3;
+    z-index: 4;
 }
 
 @media screen and (max-width: 767px) {
