--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,8 @@
 .cover__title {
+    position: relative;
     margin: 0 0 32px 0;
     max-width: 560px;
-    z-index: 3;
+    z-index: 4;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
