--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,17 +1,15 @@
 .header__lang-link {
     text-decoration: none;
     color: white;
-    margin: 0;
-    align-self: end;
+    margin: 0 18px 0 0;
     height: fit-content;
     font-size: 24px;
     line-height: 28px;
     font-weight: 400;
 }
 
-.header__lang-link:nth-of-type(1) {
-    margin: 0 18px 0 auto;
-    text-decoration: underline;
+.header__lang-link:last-of-type {
+    margin: 0;
 }
 
 .header__lang-link:hover {
@@ -23,7 +21,6 @@
     .header__lang-link {
         font-size: 18px;
         line-height: 20px;
-        font-weight: 400;
     }
 }
 
