--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     padding: 28px 48px 0 48px;
     display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 1023px) {
