--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -5,7 +5,7 @@
     background-image: url("../../../images/cover-trains.jpg");
     width: calc(100% - 96px);
     height: 100%;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     z-index: 1;
