--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -8,11 +8,16 @@
     justify-content: center;
     z-index: 2;
     width: 100%;
-    min-height: 100%;
-    max-height: 100%;
+    min-height: calc((1280px - 96px)  * 0.625);
 }
 
 .cover__overlay:hover>.cover__opacity:last-of-type {
     color: #fff;
     opacity: 0.8;
+}
+
+@media screen and (max-width: 1279px) {
+    .cover__overlay {
+        min-height: calc((100vw) * 0.625);
+    }
 }
